# saltyreplay

./: .gitattributes  .gitignore  Cargo.toml  README.md  data.fsreplay  data2.json  package-lock.json  package.json  replay_example.json
public/: index.html
replays/: replay_example.json
src/: Playbar.jsx  RecordPage.jsx  ReplaysPage.jsx  aircraft_movement.rs  main.rs  server.rs  simconnect_data.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: aircraft_movement.rs  cmd.rs  main.rs  replay_data.rs  simconnect_data.rs
src/web/: .eslintcache  asset-manifest.json  index.html  package-lock.json  package.json
src/web/src/: App.js  Navbar.jsx  ReplaysPage.jsx  index.css  replays.json
src/web/static/css/: main.fa0603a1.chunk.css  main.fa0603a1.chunk.css.map
src/web/static/js/: 2.db1a16c9.chunk.js  2.db1a16c9.chunk.js.map  main.f9cb78ed.chunk.js  main.f9cb78ed.chunk.js.map  runtime-main.505e5d6f.js  runtime-main.505e5d6f.js.map
web-view/: NOTICE
web-view/webview-sys/: NOTICE
