[package]
name = "fsreplay"
version = "0.1.0"
authors = ["Ninjo <ninjomcs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simconnect = "0.1.3"
json = "0.12.4"
serde_json = "1.0.59"
web-view = { path = "web-view", version = "0.6.3", features = ["edge"] }
actix-web = "3"
actix-files = "0.4.1"