[package]
name = "saltyreplay"
version = "0.1.0"
description = "A free and open source replay tool for MSFS"
authors = [ "Ninjo <ninjomcs@gmail.com>" ]
license = "GPLv3"
repository = ""
default-run = "saltyreplay"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0.59"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.11", features = [ "all-api" ] }
actix-web = "3"
actix-files = "0.4.1"
msfs = "0.0.1-alpha.2"
glob = "0.3.0"

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "saltyreplay"
path = "src/main.rs"
